fix sizing of small tables inside table wraps
`min-width: 100%` was originally working in chrome at the time <TableWrap/> was introduced. it still works (as of 2020-10-29) in safari and partially works in ff. table sizing behavior is notoriously tricky, so we use calc and absolute units (subtracting from 100vw) to ensure the min-width is adhered to. this is a "nice-to-have" design thing so no fallback is necessary.

--- a/src/css/docs/components/docs-content.css
+++ b/src/css/docs/components/docs-content.css
@@ -15,7 +15,8 @@
 
 @media (max-width: 768px) {
   .DocsContent {
-    padding: 2rem 1rem;
+    --docs-content-horizontal-padding: 1rem;
+    padding: 2rem var(--docs-content-horizontal-padding);
     min-height: 1em; /* TODO */
   }
 }
