--- a/src/css/docs/components/docs-markdown.css
+++ b/src/css/docs/components/docs-markdown.css
@@ -730,7 +730,8 @@ blockquote .DocsMarkdown--header-anchor-positioner {
 }
 
 .DocsMarkdown--table-wrap {
-  border: 1px solid rgba(var(--color-rgb), .15);
+  --table-border-width: 1px;
+  border: var(--table-border-width) solid rgba(var(--color-rgb), .15);
   padding: .25em 0;
   border-radius: .3125em;
   overflow-x: auto;
@@ -746,8 +747,18 @@ blockquote .DocsMarkdown--header-anchor-positioner {
 }
 
 .DocsMarkdown--table-wrap table {
-  min-width: 100%;
+  min-width: calc(var(--docs-body-width) - (2 * var(--docs-content-gap)) - (2 * var(--table-border-width)));
   margin: 0;
+}
+
+@media (max-width: 768px) {
+  .DocsMarkdown--table-wrap table {
+    min-width: calc(
+      100vw -
+      (2 * var(--docs-content-horizontal-padding)) -
+      (2 * var(--table-border-width))
+    );
+  }
 }
 
 .DocsMarkdown--table-wrap table {
